@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-bin_SCRIPTS = fortune.pl iosock.pl tail.pl x11amp.pl
+bin_SCRIPTS = fortune.pl iosock.pl tail.pl x11amp.pl lcdident.pl
 
 EXTRA_DIST = $(bin_SCRIPTS)
 
